# routes/docs/swagger.json
@@ -3,128 +3,19 @@
   "info": {
     "title": "Cats API",
     "description": "API for managing cats and cat breeds information",
+    "host": "localhost:8080",
     "version": "1.0.0"
   },
   "host": "cse-341-custom-project.onrender.com",
   "basePath": "/",
-    "schemes": [
-    "https"
-  ],
-  "tags": [
-    {
-      "name": "Cats",
-      "description": "Endpoints for managing individual cats"
-    },
-    {
-      "name": "Cat Breeds",
-      "description": "Endpoints for managing cat breeds"
-    }
-  ],
-
+  "schemes": "https",
   "paths": {
     "/": {
       "get": {
         "description": "",
         "responses": {
           "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/Cat"
-            }
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
@@ -137,10 +28,7 @@
         "description": "Get all cats",
         "responses": {
           "200": {
-            "description": "Cats successfully obtained",
-            "schema": {
-              "$ref": "#/definitions/Cat"
-            }
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
@@ -148,148 +36,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Cats"
-        ],
-        "description": "Create a new cat",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "Cat information",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "object"
-                },
-                "required": {
-                  "type": "array",
-                  "example": [
-                    "name",
-                    "birthday",
-                    "breed",
-                    "gender",
-                    "isVaccinated",
-                    "weight",
-                    "imageURL"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                "properties": {
-                  "type": "object",
-                  "properties": {
-                    "name": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        },
-                        "example": {
-                          "type": "string",
-                          "example": "Whiskers"
-                        }
-                      }
-                    },
-                    "birthday": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        },
-                        "example": {
-                          "type": "string",
-                          "example": "2020-01-01"
-                        }
-                      }
-                    },
-                    "breed": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        },
-                        "example": {
-                          "type": "string",
-                          "example": "Persian"
-                        }
-                      }
-                    },
-                    "gender": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        },
-                        "enum": {
-                          "type": "array",
-                          "example": [
-                            "Male",
-                            "Female"
-                          ],
-                          "items": {
-                            "type": "string"
-                          }
-                        },
-                        "example": {
-                          "type": "string",
-                          "example": "Male"
-                        }
-                      }
-                    },
-                    "isVaccinated": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "boolean"
-                        },
-                        "example": {
-                          "type": "boolean",
-                          "example": true
-                        }
-                      }
-                    },
-                    "weight": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "number"
-                        },
-                        "example": {
-                          "type": "number",
-                          "example": 4.5
-                        }
-                      }
-                    },
-                    "imageURL": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        },
-                        "example": {
-                          "type": "string",
-                          "example": "https://example.com/cat.jpg"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        ],
+        "description": "",
         "responses": {
           "201": {
             "description": "Created"
@@ -480,183 +227,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        }
-      }
-    }
-  },
-  "definitions": {
-    "Cat": {
-      "type": "object",
-      "properties": {
-        "type": {
-          "type": "string",
-          "example": "object"
-        },
-        "required": {
-          "type": "array",
-          "example": [
-            "name",
-            "birthday",
-            "breed",
-            "gender",
-            "isVaccinated",
-            "weight",
-            "imageURL"
-          ],
-          "items": {
-            "type": "string"
-          }
-        },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "name": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "The name of the cat"
-                }
-              }
-            },
-            "birthday": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "The birthday of the cat"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "2020-01-01"
-                }
-              }
-            },
-            "breed": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "The breed of the cat"
-                }
-              }
-            },
-            "gender": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "The gender of the cat"
-                },
-                "enum": {
-                  "type": "array",
-                  "example": [
-                    "Male",
-                    "Female"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                }
-              }
-            },
-            "isVaccinated": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "boolean"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "Whether the cat is vaccinated"
-                }
-              }
-            },
-            "weight": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "number"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "The weight of the cat in kilograms"
-                }
-              }
-            },
-            "imageURL": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "URL to the cat's image"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "CatBreed": {
-      "type": "object",
-      "properties": {
-        "type": {
-          "type": "string",
-          "example": "object"
-        },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "name": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "description": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "origin": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
           }
         }
       }
